# text-generation

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  tmp.txt
docs/: application.md  license.md  main.tex
img/: __init__.py  core.py
text-generation/: pyproject.toml
text-generation/img/: __init__.py  core.py  model.py
text-generation/scripts/: logging.py
text-generation/text/: __init__.py  core.py
